--- a/css/main.css
+++ b/css/main.css
@@ -285,6 +285,10 @@ h2 {
   text-align: center;
   /* Выравнивает текст по центру */
   /* max-width: 300px; Ограничение ширины, по желанию */
+    background: linear-gradient(180deg, rgba(70, 163, 88, 0.1) 0%, rgba(70, 163, 88, 0.03) 100%);
+    width: 310px;
+    height: 470px;
+    padding: 4px;
 }
 .sale-text {
   font-family: "hanging", sans-serif;
